--- a/package.json
+++ b/package.json
@@ -15,7 +15,11 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^5.1.1",
+    "cookie-parser": "^1.4.7",
     "express": "^4.21.1",
-    "mongoose": "^8.7.2"
+    "jsonwebtoken": "^9.0.2",
+    "mongoose": "^8.7.2",
+    "validator": "^13.12.0"
   }
 }
